--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,37 @@ ul {
     line-height: 1.17;
     text-align: center;
 }
+
+.item-thumb {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-thumb::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+
+    width: 370px;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    bottom: 0;
+}
+
+.item-thumb .title {
+    position: absolute;
+    text-transform: uppercase;
+    color: var(--title-text-color);
+    
+    bottom: 0%;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+}
 /* Скрыть заголовки */
 
 .feature-title, 
@@ -645,25 +676,25 @@ img {
 }
 
 .sites-tumb::before {
+    content: "";
     position: absolute;
     display: block;
-    content: "";
-
+    
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
     background-color: var(--bg-color-overlay-sites);
-
     opacity: 0;
 
-    /* transform: translateX(-100%);
-    transition: transform 250ms ease; */
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sites-tumb:hover::before {
     opacity: 1;
+    transform: translateY(0);
 }
 
 .label {
@@ -839,4 +870,36 @@ img {
 
 .footer-icon-social:first-child {
     margin-left: 0;
+}
+
+/* Модальное окно */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 528px;
+    height: 581px;
+    
+    background: var(--primary-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
