--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
     --border-sites: #EEEEEE;
     --border-clients: #AFB1B8;
     --card-sites-gap: 30px;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }   
 
 /* цвет основого текста #212121 */
@@ -671,14 +672,11 @@ img {
 
 .sites-tumb {
     position: relative;
-    
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
-.sites-tumb::before {
-    content: "";
+.sites-overlay {
     position: absolute;
-    display: block;
     
     top: 0;
     left: 0;
@@ -686,39 +684,36 @@ img {
     height: 100%;
 
     background-color: var(--bg-color-overlay-sites);
-    opacity: 0;
-
+    /* opacity: 0; */
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms var(--timing-function);
 }
 
-.sites-tumb:hover::before {
+.sites-list:hover .sites-overlay,
+.sites-list:focus .sites-overlay {
     opacity: 1;
     transform: translateY(0);
+    
 }
 
-.label {
+.sites-label {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
 
-    opacity: 0;
+.sites-label:hover,
+.sites-label:focus {
+    opacity: 1;
+}
 
+.label{
     color: var(--title-text-color);
     font-size: 18px;
     line-height: 1.56;
-   
     width: 322px;
-    /* height: 168px; */
-    
 }
-
-.label:hover {
-    opacity: 1;
-
-}
-
 /* 
 .sites-list:nth-child(3n) {
     margin-right: 0;
