--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,8 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    transition: color 250ms var(--timing-function) 150ms;
     
 }
 
@@ -217,6 +219,8 @@ ul {
     display: flex;
     align-items: center;
     color: inherit;
+    
+    transition: color 250ms var(--timing-function) 150ms;
 }
 
 .contacts-mail:hover, 
@@ -306,6 +310,10 @@ ul {
     border-radius: 4px;
     border: none;
     text-align: center;
+    cursor: pointer;
+
+    transform: rotateY(0);
+    transition: transform 250ms var(--timing-function) 250ms;
 
 }
 
@@ -323,6 +331,8 @@ ul {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+
+    cursor: pointer;
     /* align-items: center; */
 }
 
@@ -331,6 +341,75 @@ ul {
     color: var(--title-text-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+    transform: rotateY(360deg);
+    transition: transform 250ms var(--timing-function) 250ms;
+}
+
+/* Модальное окно */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    
+}
+
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 528px;
+    height: 581px;
+
+    background: var(--primary-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms var(--timing-function);
+}
+
+.modal-button {
+    position: fixed;
+    display: flex;
+    align-items: center;
+
+    width: 30px;
+    height: 30px;
+    top: 0;
+    right: 0;
+    margin-top: 8px;
+    margin-right: 8px;
+
+    background-position: center;
+    background-color: var(--primary-bg-color);
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    cursor: pointer;
+}
+
+.modal-svg {
+    fill: var(--logo-accent-color);
 }
 
 /* секции */
@@ -380,6 +459,7 @@ ul {
     height: 70px;
     background-color: rgba(47, 48, 58, 0.8);
     bottom: 0;
+    
 }
 
 .item-thumb .title {
@@ -394,6 +474,7 @@ ul {
     font-size: 14px;
     line-height: 1.14;
 }
+
 /* Скрыть заголовки */
 
 .feature-title, 
@@ -612,6 +693,8 @@ img {
     margin-bottom: 0;
     background-color: var(--primary-bg-color);
     border: none;
+
+    
 }
 
 .clients-list:nth-child(6n) {
@@ -630,6 +713,9 @@ img {
     border: 1px solid var(--border-clients);
     border-radius: 4px;
     fill: var(--clients-accent-color);
+
+    transform: scale(1);
+    transition: transform 250ms var(--timing-function) 150ms, fill 250ms var(--timing-function) 150ms;
 }
 
 .clients-icon:hover, 
@@ -637,6 +723,10 @@ img {
     fill: var(--accent-color);
     border: 1px solid var(--accent-color);
     cursor: pointer;
+
+    transform: scale(1.2);
+    transition: transform 250ms var(--timing-function) 150ms, fill 250ms var(--timing-function) 150ms;
+
 }
 
  /* Портфолио сайты */
@@ -790,6 +880,8 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration: none;
+
+    transition: color 250ms var(--timing-function) 150ms;
 }
 
 .footer-address {
@@ -867,34 +959,4 @@ img {
     margin-left: 0;
 }
 
-/* Модальное окно */
 
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.backdrop.is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-    width: 528px;
-    height: 581px;
-    
-    background: var(--primary-bg-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-}
