--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,7 @@ ul {
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 8px;
 
     width: 528px;
     height: 581px;
@@ -383,7 +384,7 @@ ul {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    
+
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms var(--timing-function);
 }
@@ -397,6 +398,7 @@ ul {
     height: 30px;
     top: 0;
     right: 0;
+    
     margin-top: 8px;
     margin-right: 8px;
 
@@ -664,6 +666,9 @@ img {
     
     background-color: var(--primary-bg-color);
     border-radius: 50%;
+
+    transform: scale(1);
+    transition: background-color 250ms var(--timing-function) 150ms, transform 250ms var(--timing-function) 200ms;
 }
 
 .team-svg {
@@ -673,6 +678,9 @@ img {
 .team-icon-size:hover, 
 .team-icon-size:focus {
     background-color: var(--accent-color);
+
+    transform: scale(1.3);
+    transition: background-color 250ms var(--timing-function), transform 250ms var(--timing-function) 200ms;
 }
 
 .team-icon-size:hover svg, 
@@ -935,7 +943,28 @@ img {
     background-position: center;
     background-color: var(--footer-icon-color);
     border-radius: 50%;
+
+    transition: background-color 250ms var(--timing-function) 150ms;
 }
+
+/* .footer-icon-size:hover {
+    animation-name: changeBgColor;
+    animation-duration: 250ms;
+}
+
+@keyframes changeBgColor {
+    0% {
+        background-color: var(--footer-icon-color);
+    }
+
+    50% {
+        background-color: orange;
+    }
+
+    100% {
+        background-color: var(--accent-color);
+    }
+} */
 
 .footer-svg {
     fill: var(--primary-bg-color);
@@ -945,6 +974,8 @@ img {
 .footer-icon-size:hover,
 .footer-icon-size:focus {
     background-color: var(--accent-color);
+
+    transition: background-color 250ms var(--timing-function) 150ms;
 }
 
 .footer-icon-size:hover svg {
