--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,6 @@ ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    /* outline: 2px solid teal; */
 }
 
 .main-nav {
@@ -153,7 +152,7 @@ ul {
     letter-spacing: 0.02em;
     text-decoration: none;
 
-    transition: color 250ms var(--timing-function) 150ms;
+    transition: color 250ms var(--timing-function);
     
 }
 
@@ -220,7 +219,7 @@ ul {
     align-items: center;
     color: inherit;
     
-    transition: color 250ms var(--timing-function) 150ms;
+    transition: color 250ms var(--timing-function);
 }
 
 .contacts-mail:hover, 
@@ -313,7 +312,10 @@ ul {
     cursor: pointer;
 
     transform: rotateY(0);
-    transition: transform 250ms var(--timing-function) 250ms;
+    transition: color 250ms var(--timing-function),
+        background-color 250ms var(--timing-function),
+        transform 250ms var(--timing-function), 
+        box-shadow 250ms var(--timing-function); 
 
 }
 
@@ -343,7 +345,7 @@ ul {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
     transform: rotateY(360deg);
-    transition: transform 250ms var(--timing-function) 250ms;
+    
 }
 
 /* Модальное окно */
@@ -354,21 +356,16 @@ ul {
     left: 0;
     width: 100%;
     height: 100%;
-
+    z-index: 9;
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
-    transition: opacity 250ms var(--timing-function);
+    transition: opacity 250ms var(--timing-function), background-color 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    
-}
-
-.backdrop.is-hidden .modal{
-    transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal {
@@ -387,6 +384,10 @@ ul {
 
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal-button {
@@ -408,6 +409,7 @@ ul {
     border: 1px solid rgba(0, 0, 0, 0.1);
 
     cursor: pointer;
+    
 }
 
 .modal-svg {
@@ -668,19 +670,18 @@ img {
     border-radius: 50%;
 
     transform: scale(1);
-    transition: background-color 250ms var(--timing-function) 150ms, transform 250ms var(--timing-function) 200ms;
+    transition: background-color 250ms var(--timing-function), transform 250ms var(--timing-function);
 }
 
 .team-svg {
     fill: var(--border-clients);
+    transition: fill 250ms var(--timing-function),
 }
 
 .team-icon-size:hover, 
 .team-icon-size:focus {
     background-color: var(--accent-color);
-
     transform: scale(1.3);
-    transition: background-color 250ms var(--timing-function), transform 250ms var(--timing-function) 200ms;
 }
 
 .team-icon-size:hover svg, 
@@ -723,7 +724,7 @@ img {
     fill: var(--clients-accent-color);
 
     transform: scale(1);
-    transition: transform 250ms var(--timing-function) 150ms, fill 250ms var(--timing-function) 150ms;
+    transition: border 250ms var(--timing-function), transform 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
 
 .clients-icon:hover, 
@@ -733,7 +734,6 @@ img {
     cursor: pointer;
 
     transform: scale(1.2);
-    transition: transform 250ms var(--timing-function) 150ms, fill 250ms var(--timing-function) 150ms;
 
 }
 
@@ -759,6 +759,7 @@ img {
 .sites-link {
     display: block;
     text-decoration: none;
+    transition: box-shadow 250ms var(--timing-function);
 }
 
 .sites-link:hover,
@@ -889,7 +890,7 @@ img {
     letter-spacing: 0.03em;
     text-decoration: none;
 
-    transition: color 250ms var(--timing-function) 150ms;
+    transition: color 250ms var(--timing-function);
 }
 
 .footer-address {
@@ -944,7 +945,7 @@ img {
     background-color: var(--footer-icon-color);
     border-radius: 50%;
 
-    transition: background-color 250ms var(--timing-function) 150ms;
+    transition: background-color 250ms var(--timing-function);
 }
 
 /* .footer-icon-size:hover {
@@ -974,9 +975,7 @@ img {
 .footer-icon-size:hover,
 .footer-icon-size:focus {
     background-color: var(--accent-color);
-
-    transition: background-color 250ms var(--timing-function) 150ms;
-}
+   }
 
 .footer-icon-size:hover svg {
     fill: var(--primary-bg-color);
